# Fillablerx2.0

./: .gitignore  Procfile  README.md  entry.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  schema.yml  start.py
api/: admin.py  models.py  serializers.py  sms.py  urls.py  views.py
api/migrations/: 0003_rename_medication_name_request_med_name_and_more.py  0004_alter_request_med_strength.py  0009_alter_pharmacy_name_alter_request_med_name_and_more.py  0010_request_user_type.py  0011_alter_request_user_type.py  0012_pharmacy_contact_email_pharmacy_contact_name_and_more.py  0013_pharmacy_signature.py  0014_request_delivery_status.py  0015_pharmacy_signed_agreement_admin.py  0016_pharmacy_network.py  0017_pharmacy_initial_rate.py  0018_medication_isspecialty.py  0019_pharmacy_additional_language_pharmacy_isdelivery.py
app/: urls.py
app/api/: admin.py  models.py  serializers.py  sms.py  urls.py  views.py
app/api/migrations/: 0001_initial.py  0002_medication_request_and_more.py  0005_alter_request_bin_alter_request_med_strength_and_more.py  (+3 more)
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/auth_sessions/: serializers.py  urls.py  views.py
app/data/: pharmacies.csv
app/scripts/: import_medications.py  import_pharmacies.py
app/settings/: base.py  dev.py  prod.py
auth_sessions/: apps.py  serializers.py  urls.py  views.py
client/: package-lock.json  package.json
client/public/: index.html  robots.txt  sitemap.txt
client/src/: App-old.css  App.css  App.js  index-styles.js  index.js  styles.css
data/: medications.csv
scripts/: import_medications.py  import_pharmacies.py  test_med_name_strength_combinations.py
templates/admin/: index.html
tests/: conftest.py
tests/api/: factories.py  test_serializers.py  test_sms.py  test_views.py
(+150 files in other folders)
