[tool.poetry]
name = "fillableRx"
version = "0.1.0"
description = ""
authors = ["Kevin Guerrero <guerrk83z@gmail.com>"]
readme = "README.md"
packages = [{include = "fillableRx"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
