[tool.poetry]
name = "fillableRx"
version = "0.1.0"
description = ""
authors = ["Kevin Guerrero <guerrk83z@gmail.com>"]
readme = "README.md"
packages = [{include = "fillableRx"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"
django = "^4.1.3"
django-environ = "^0.9.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.1"}
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
